Enable `AFL_SHA1_FILENAMES` by default

--- a/cargo-test-fuzz/Cargo.toml
+++ b/cargo-test-fuzz/Cargo.toml
@@ -50,6 +50,8 @@ xshell = { workspace = true }
 testing = { workspace = true }
 
 [features]
+default = ["sha1-filenames"]
+sha1-filenames = []
 test-install = []
 
 [lints]
