--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,13 @@ members = [
 ]
 resolver = "2"
 
+[workspace.lints.rust]
+unexpected_cfgs = { level = "deny", check-cfg = [
+    "cfg(dylint_lib, values(any()))",
+    "cfg(fuzzing)",
+    "cfg(serde_default)",
+] }
+
 [workspace.lints.clippy]
 pedantic = { level = "warn", priority = -1 }
 nursery = { level = "warn", priority = -1 }
