--- a/testing/Cargo.toml
+++ b/testing/Cargo.toml
@@ -14,6 +14,7 @@ if_chain = "1.0"
 log = "0.4"
 once_cell = "1.19"
 retry = "2.0"
+strip-ansi-escapes = "0.2"
 subprocess = "0.2"
 
 internal = { path = "../internal", package = "test-fuzz-internal", version = "=5.2.1" }
