Set `AFL_NO_AFFINITY` to 1

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -214,6 +214,7 @@ jobs:
         run: |
           $TEST_CMD
         env:
+          AFL_NO_AFFINITY: 1
           RUST_BACKTRACE: 1
           RUST_LOG: warn
 
