--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,4 +33,4 @@ option-if-let-else = "allow"
 redundant-pub-crate = "allow"
 
 [workspace.metadata.unmaintained]
-ignore = ["num_cpus", "parse_duration"]
+ignore = ["num_cpus", "option_set", "parse_duration"]
