--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ pedantic = { level = "warn", priority = -1 }
 nursery = { level = "warn", priority = -1 }
 cognitive-complexity = "allow"
 collection-is-never-read = "allow"
+manual-unwrap-or-default = "allow"
 missing-errors-doc = "allow"
 missing-panics-doc = "allow"
 multiple-bound-locations = "allow"
