--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -9,13 +9,13 @@ name = "hello-world"
 path = "src/main.rs"
 
 [dependencies]
-serde = { version = "1.0", features = ["rc"] }
-test-fuzz = { path = "../test-fuzz", version = "=5.2.2" }
+serde = { workspace = true }
+test-fuzz = { workspace = true }
 
 [dev-dependencies]
-once_cell = "1.19"
-parse_duration = "2.1"
-serde_json = "1.0"
+once_cell = { workspace = true }
+parse_duration = { workspace = true }
+serde_json = { workspace = true }
 
 [features]
 __bar_fuzz = []
