--- a/internal/Cargo.toml
+++ b/internal/Cargo.toml
@@ -15,9 +15,10 @@ repository = "https://github.com/trailofbits/test-fuzz"
 # in when another format is selected.
 
 [dependencies]
-cargo_metadata = "0.18"
-serde = "1.0"
+cargo_metadata = { workspace = true }
+serde = { workspace = true }
 
+# smoelius: Serde formats
 bincode = "1.3"
 cbor4ii = { version = "0.3", features = ["serde1", "use_std"], optional = true }
 postcard = { version = "1.0", features = ["use-std"], optional = true }
