--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -10,12 +10,12 @@ license = "AGPL-3.0 WITH mif-exception"
 repository = "https://github.com/trailofbits/test-fuzz"
 
 [dependencies]
-hex = "0.4"
-num-traits = "0.2"
-serde = { version = "1.0", features = ["derive"] }
-sha1 = "0.10"
+hex = { workspace = true }
+num-traits = { workspace = true }
+serde = { workspace = true }
+sha1 = { workspace = true }
 
-internal = { path = "../internal", package = "test-fuzz-internal", version = "=5.2.2" }
+internal = { workspace = true }
 
 [lints]
 workspace = true
