--- a/.github/workflows/update_patches.yml
+++ b/.github/workflows/update_patches.yml
@@ -34,6 +34,7 @@ jobs:
         uses: peter-evans/create-pull-request@v7
         with:
           title: Update patches
+          branch: update-patches
+          branch-suffix: random
           commit-message: Update patches
           token: ${{ secrets.REPO_TOKEN }}
-          branch-suffix: random
