--- a/.github/workflows/update_supply_chain.yml
+++ b/.github/workflows/update_supply_chain.yml
@@ -39,6 +39,7 @@ jobs:
         uses: peter-evans/create-pull-request@v7
         with:
           title: Update supply_chain.json
+          branch: update-supply-chain
+          branch-suffix: random
           commit-message: Update supply_chain.json
           token: ${{ secrets.REPO_TOKEN }}
-          branch-suffix: random
