--- a/Cargo.toml
+++ b/Cargo.toml
@@ -88,5 +88,6 @@ redundant-pub-crate = "allow"
 ignore = [
     "parse_duration",
     # https://github.com/alacritty/vte/pull/122#issuecomment-2579278540
-    "utf8parse"
+    "utf8parse",
+    "wit-bindgen-rt",
 ]
