--- a/internal/Cargo.toml
+++ b/internal/Cargo.toml
@@ -19,7 +19,7 @@ cargo_metadata = { workspace = true }
 serde = { workspace = true }
 
 # smoelius: Serde formats
-bincode = "2.0"
+bincode = { version = "2.0", features = ["serde"] }
 postcard = { version = "1.1", features = ["use-std"], optional = true }
 
 [features]
