--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,10 +58,10 @@ walkdir = "2.5"
 xshell = "0.2"
 
 # smoelius: Internal packages
-internal = { path = "internal", package = "test-fuzz-internal", version = "=7.1.0" }
-runtime = { path = "runtime", package = "test-fuzz-runtime", version = "=7.1.0" }
-test-fuzz = { path = "test-fuzz", version = "=7.1.0" }
-test-fuzz-macro = { path = "macro", version = "=7.1.0" }
+internal = { path = "internal", package = "test-fuzz-internal", version = "=7.1.1" }
+runtime = { path = "runtime", package = "test-fuzz-runtime", version = "=7.1.1" }
+test-fuzz = { path = "test-fuzz", version = "=7.1.1" }
+test-fuzz-macro = { path = "macro", version = "=7.1.1" }
 testing = { path = "testing", package = "test-fuzz-testing" }
 
 # `serde_combinators` does not sync with `test-fuzz`'s version.
@@ -86,6 +86,7 @@ missing-panics-doc = "allow"
 multiple-bound-locations = "allow"
 option-if-let-else = "allow"
 redundant-pub-crate = "allow"
+struct-field-names = "allow"
 
 [workspace.metadata.unmaintained]
 ignore = [
