--- a/internal/Cargo.toml
+++ b/internal/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "test-fuzz-internal"
-version = "7.1.0"
+version = "7.1.1"
 edition = "2021"
 
 description = "test-fuzz-internal"
@@ -19,7 +19,7 @@ cargo_metadata = { workspace = true }
 serde = { workspace = true }
 
 # smoelius: Serde formats
-bincode = "1.3"
+bincode = { version = "2.0", features = ["serde"] }
 postcard = { version = "1.1", features = ["use-std"], optional = true }
 
 [features]
