--- a/cargo-test-fuzz/Cargo.toml
+++ b/cargo-test-fuzz/Cargo.toml
@@ -41,6 +41,7 @@ internal = { workspace = true }
 test-fuzz = { workspace = true }
 
 [dev-dependencies]
+assert_cmd = { workspace = true }
 predicates = { workspace = true }
 rlimit = { workspace = true }
 tempfile = { workspace = true }
