add prettier integration test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -130,6 +130,7 @@ jobs:
           cargo install cargo-unmaintained       || true
           cargo install group-runner             || true
           go install github.com/rhysd/actionlint/cmd/actionlint@latest
+          npm install -g prettier
 
       - name: Free up space
         run: |
