--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -129,6 +129,7 @@ jobs:
           cargo install cargo-supply-chain       || true
           cargo install cargo-unmaintained       || true
           cargo install group-runner             || true
+          go install github.com/rhysd/actionlint/cmd/actionlint@latest
 
       - name: Free up space
         run: |
