--- a/Cargo.toml
+++ b/Cargo.toml
@@ -92,6 +92,8 @@ struct-field-names = "allow"
 
 [workspace.metadata.unmaintained]
 ignore = [
+    "bincode",
+    "bincode_derive",
     "parse_duration",
     # https://github.com/alacritty/vte/pull/122#issuecomment-2579278540
     "utf8parse",
