Eliminate reliance on `cargo-sort`

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,7 +96,7 @@ jobs:
 
       - uses: taiki-e/install-action@v2
         with:
-          tool: cargo-sort, cargo-udeps
+          tool: cargo-udeps
 
       # smoelius: I expect this list to grow.
       - name: Install tools
