--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,7 @@ subprocess = "0.2"
 syn = { version = "2.0", features = ["full", "parsing", "visit", "visit-mut"] }
 tempfile = "3.23"
 termsize = "0.1"
+toml_edit = "0.23"
 walkdir = "2.5"
 xshell = "0.2"
 
