--- a/test-fuzz/Cargo.toml
+++ b/test-fuzz/Cargo.toml
@@ -29,6 +29,7 @@ semver = { workspace = true }
 serde_json = { workspace = true }
 similar-asserts = { workspace = true }
 tempfile = { workspace = true }
+toml_edit = { workspace = true }
 walkdir = { workspace = true }
 
 testing = { workspace = true }
