--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,6 +13,10 @@ updates:
 
   - package-ecosystem: cargo
     directory: /
+    groups:
+      rust:
+        patterns:
+          - "*"
     schedule:
       interval: weekly
       day: thursday
