--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@ serde_assert = "0.8"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive", "rc"] }
 sha1 = "0.10"
+snapbox = "0.6"
 similar-asserts = "1.7"
 strip-ansi-escapes = "0.2"
 strum_macros = "0.27"
