--- a/Cargo.toml
+++ b/Cargo.toml
@@ -95,7 +95,9 @@ ignore = [
     "bincode",
     "bincode_derive",
     "parse_duration",
+    "unty",
     # https://github.com/alacritty/vte/pull/122#issuecomment-2579278540
     "utf8parse",
     "wit-bindgen-rt",
+    "virtue",
 ]
