Check lcov by parsing it and stripping disambiguators

--- a/test-fuzz/Cargo.toml
+++ b/test-fuzz/Cargo.toml
@@ -35,6 +35,10 @@ walkdir = { workspace = true }
 
 testing = { workspace = true }
 
+[target.'cfg(target_os = "linux")'.dev-dependencies]
+lcov = "0.8"
+rustc-demangle = "0.1"
+
 # smoelius: A list of formats we might support can be found here:
 # https://github.com/djkoloski/rust_serialization_benchmark
 
