Silence "No `test_fuzz`" warning when not testing

--- a/fuzzable/Cargo.toml
+++ b/fuzzable/Cargo.toml
@@ -19,6 +19,7 @@ serde_json = { workspace = true }
 [features]
 __bar_fuzz = []
 __inapplicable_conversion = []
+__no_test_fuzz = []
 __self_ty_conflict = []
 
 [lints]
