--- a/Cargo.toml
+++ b/Cargo.toml
@@ -95,6 +95,7 @@ ignore = [
     "bincode",
     "bincode_derive",
     "parse_duration",
+    "strip-ansi-escapes",
     "unty",
     # https://github.com/alacritty/vte/pull/122#issuecomment-2579278540
     "utf8parse",
